# nss-tls

./: .travis.yml  AUTHORS  Dockerfile  README  README.md  buildspec.yml  ci.py  ci.sh  meson.build  meson_options.txt  nss-tls.c  nss-tls.conf.in  nss-tls.h  nss-tlsd-user.service.in  nss-tlsd.8  nss-tlsd.c  nss-tlsd.service.in  tlslookup.1  tlslookup.c
.github/workflows/: build.yml  ci-container.yml
debian/: README.Debian  README.source  changelog  control  copyright  libnss-tls.install  libnss-tls.lintian-overrides  libnss-tls.postinst  libnss-tls.postrm  not-installed  nss-tlsd.install  rules  tlslookup.install  watch
debian/patches/: 0001-Add-simple-manpage-for-tlslookup.patch  series
