option(
    'resolvers',
    type: 'string',
    value: 'dns9.quad9.net/dns-query',
    description: 'Comma-delimited URLs of DoH servers to use'
)

option(
    'timeout',
    type: 'integer',
    value: 4,
    description: 'Timeout for each resolving attempt'
)

option(
    'cache',
    type: 'boolean',
    description: 'Keep internal cache in nss-tlsd'
)

option(
    'deterministic',
    type: 'boolean',
    description: 'Use a deterministic method to choose the DoH server to use'
)

option(
    'user',
    type: 'string',
    value: 'daemon',
    description: 'An unprivileged user to drop to when nss-tlsd runs as root'
)

option(
    'group',
    type: 'string',
    value: 'daemon',
    description: 'An unprivileged group to drop to when nss-tlsd runs as root'
)
