option(
    'resolvers',
    type: 'string',
    description: 'Comma-delimited URLs of DoH servers to use'
)

option(
    'timeout',
    type: 'integer',
    value: 4,
    description: 'Timeout for each resolving attempt'
)

option(
    'user',
    type: 'string',
    value: 'daemon',
    description: 'An unprivileged user to drop to when nss-tlsd runs as root'
)

option(
    'group',
    type: 'string',
    value: 'daemon',
    description: 'An unprivileged group to drop to when nss-tlsd runs as root'
)

option(
    'resconf',
    type: 'string',
    description: 'Path to resolv.conf'
)
